--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lorleod/iss_spotter#readme",
   "dependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
     "request": "^2.88.2"
   }
 }
